try to fix aside to always visible

--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ aside {
   width: 25%;
   float: right;
   padding: 0.25em;
-  font: 0.75em;
+  position:fixed;
 }
 aside h1 {
   margin: 0.25em 0.25em 0em 0em;
